--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "compare": "cpp",
+        "type_traits": "cpp",
+        "iosfwd": "cpp"
     }
 }
