--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,9 @@
         "__tuple": "cpp",
         "ios": "cpp",
         "locale": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "iomanip": "cpp",
+        "sstream": "cpp",
+        "__functional_03": "cpp"
     }
 }
